--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,6 @@ dependencies {
     def navVersion = "2.3.0-alpha06"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
-    // Dynamic Feature Module Support
-    //implementation "androidx.navigation:navigation-dynamic-features-fragment:$navVersion"
 
     def pagingVersion = "2.1.2"
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
@@ -107,4 +105,10 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.github.bumptech.glide:okhttp3-integration:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
+
+
+    //testing: Mockito
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
